--- a/symulinks/.editorconfig
+++ b/symulinks/.editorconfig
@@ -14,6 +14,8 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = false
+indent_style = space
+indent_size = 2
 
 # JSON
 [*.json]
@@ -31,14 +33,14 @@ indent_style = space
 indent_size = 2
 
 # JS and Typescript
-[*.{js,jsx, ts,tsx}]
+[*.{js, jsx, ts, tsx}]
 indent_style = space
 indent_size = 2
 
 # LESS
-[*.less]
+[*.{less,css}]
 indent_style = space
-indent_size = 4
+indent_size = 2
 
 # MJML
 [*.mjml]
