--- a/symlinks/.lazygit_config.yml
+++ b/symlinks/.lazygit_config.yml
@@ -1,6 +1,8 @@
 os:
   edit: 'nvim --server "$NVIM" --remote-tab {{filename}}'
   editAtLine: 'nvim --server "$NVIM" --remote-tab {{filename}}; [ -z "$NVIM" ] || nvim --server "$NVIM" --remote-send ":{{line}}<CR>"'
+  # edit: '[[ -z "$NVIM" ]] && { nvim {{filename}} &>/dev/tty; true; } || { nvim -u NONE --server $NVIM --remote-expr "execute(\"FloatermToggle\")" && nvim -u NONE --server $NVIM --remote {{filename}}; }'
+  # editAtLine: '[[ -z "$NVIM" ]] && { nvim +{{line}} {{filename}} &>/dev/tty; true; } || { nvim -u NONE --server $NVIM --remote-expr "execute(\"FloatermToggle\")" && nvim -u NONE --server $NVIM --remote {{filename}} && nvim -u NONE --server $NVIM --remote-expr "execute(\"normal {{line}}gg\")"; }'
   editAtLineAndWait: "nvim +{{line}} {{filename}}"
 promptToReturnFromSubprocess: false
 
