--- a/symlinks/bpytop.conf
+++ b/symlinks/bpytop.conf
@@ -11,7 +11,7 @@ theme_background=True
 truecolor=True
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes="proc cpu mem"
+shown_boxes="cpu mem net proc"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs.
 update_ms=1000
@@ -22,13 +22,13 @@ proc_update_mult=2
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" updates top process over time, "cpu responsive" updates top process directly.
-proc_sorting="threads"
+proc_sorting="memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed=False
 
 #* Show processes as a tree
-proc_tree=True
+proc_tree=False
 
 #* Which depth the tree view should auto collapse processes at
 tree_depth=3
@@ -40,7 +40,7 @@ proc_colors=True
 proc_gradient=True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core=True
+proc_per_core=False
 
 #* Show process memory as bytes instead of percent
 proc_mem_bytes=True
