--- a/kubernetes/kube-vip.yaml
+++ b/kubernetes/kube-vip.yaml
@@ -47,7 +47,7 @@ spec:
         - name: vip_ddns
           value: "false"
         - name: svc_enable
-          value: "false"
+          value: "true"
         - name: svc_leasename
           value: plndr-svcs-lock
         - name: vip_leaderelection
@@ -61,7 +61,7 @@ spec:
         - name: vip_retryperiod
           value: "1"
         - name: address
-          value: 192.168.88.109
+          value: 10.0.0.10
         - name: prometheus_server
           value: :2112
         image: ghcr.io/kube-vip/kube-vip:v0.8.2
@@ -86,4 +86,3 @@ status:
   desiredNumberScheduled: 0
   numberMisscheduled: 0
   numberReady: 0
-
