--- a/symlinks/.aerospace.toml
+++ b/symlinks/.aerospace.toml
@@ -88,22 +88,30 @@ outer.right = 0
 # '''
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
+alt-period = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 alt-shift-f = 'fullscreen'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
 alt-h = 'focus left'
-alt-j = 'focus down'
-alt-k = 'focus up'
+alt-n = 'focus left'
 alt-l = 'focus right'
+alt-o = 'focus right'
+alt-k = 'focus up'
+alt-i = 'focus up'
+alt-j = 'focus down'
+alt-e = 'focus down'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
+alt-shift-n = 'move left'
 alt-shift-l = 'move right'
+alt-shift-o = 'move right'
+alt-shift-j = 'move down'
+alt-shift-e = 'move down'
+alt-shift-k = 'move up'
+alt-shift-i = 'move up'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-shift-minus = 'resize smart -50'
@@ -208,6 +216,11 @@ alt-shift-h = ['join-with left', 'mode main']
 alt-shift-j = ['join-with down', 'mode main']
 alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
+
+alt-shift-n = ['join-with left', 'mode main']
+alt-shift-e = ['join-with down', 'mode main']
+alt-shift-i = ['join-with up', 'mode main']
+alt-shift-o = ['join-with right', 'mode main']
 
 [[on-window-detected]]
 if.app-id = 'io.alacritty'
