--- a/symlinks/yazi/package.toml
+++ b/symlinks/yazi/package.toml
@@ -8,5 +8,10 @@ use = "yazi-rs/plugins:git"
 rev = "b12a9ab"
 hash = "e0ada736ea676c2bbb3ec705a49526ef"
 
+[[plugin.deps]]
+use = "dedukun/bookmarks"
+rev = "a70648a"
+hash = "b836fb264381f35dec79930438a906d5"
+
 [flavor]
 deps = []
