--- a/symlinks/.aerospace.toml
+++ b/symlinks/.aerospace.toml
@@ -222,25 +222,25 @@ alt-shift-e = ['join-with down', 'mode main']
 alt-shift-i = ['join-with up', 'mode main']
 alt-shift-o = ['join-with right', 'mode main']
 
-[[on-window-detected]]
-if.app-id = 'io.alacritty'
-run = 'move-node-to-workspace A'
-
-[[on-window-detected]]
-if.app-id = 'com.TickTick.task.mac'
-run = 'move-node-to-workspace T'
+# [[on-window-detected]]
+# if.app-id = 'io.alacritty'
+# run = 'move-node-to-workspace A'
+#
+# [[on-window-detected]]
+# if.app-id = 'com.TickTick.task.mac'
+# run = 'move-node-to-workspace T'
 
 [[on-window-detected]]
 if.app-id = 'com.spotify.client'
 run = 'move-node-to-workspace M'
 
-[[on-window-detected]]
-if.app-id = 'com.microsoft.Outlook'
-run = 'move-node-to-workspace C'
-
-[[on-window-detected]]
-if.app-id = 'com.tinyspeck.slackmacgap'
-run = 'move-node-to-workspace C'
+# [[on-window-detected]]
+# if.app-id = 'com.microsoft.Outlook'
+# run = 'move-node-to-workspace C'
+#
+# [[on-window-detected]]
+# if.app-id = 'com.tinyspeck.slackmacgap'
+# run = 'move-node-to-workspace C'
 
 # needs to be last
 [workspace-to-monitor-force-assignment]
