--- a/symlinks/bpytop.conf
+++ b/symlinks/bpytop.conf
@@ -14,7 +14,7 @@ truecolor=True
 shown_boxes="cpu mem net proc"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs.
-update_ms=1000
+update_ms=2000
 
 #* Processes update multiplier, sets how often the process list is updated as a multiplier of "update_ms".
 #* Set to 2 or higher to greatly decrease bpytop cpu usage. (Only integers)
@@ -93,13 +93,13 @@ custom_cpu_name=""
 disks_filter=""
 
 #* Show graphs instead of meters for memory values.
-mem_graphs=False
+mem_graphs=True
 
 #* If swap memory should be shown in memory box.
 show_swap=True
 
 #* Show swap as a disk, ignores show_swap value above, inserts itself after first disk.
-swap_disk=False
+swap_disk=True
 
 #* If mem box should be split to also show disks info.
 show_disks=True
